fix(sports): add padding to tab components after extraction

--- a/src/app/features/sports/components/detail/tabs/sport-players-tab.component.less
+++ b/src/app/features/sports/components/detail/tabs/sport-players-tab.component.less
@@ -1,3 +1,7 @@
+.sport-players-tab {
+  padding: 2rem;
+}
+
 .sport-players-tab__search-container {
   display: flex;
   align-items: center;
@@ -115,4 +119,10 @@
 
 .sport-players-tab__error {
   color: var(--tui-text-negative);
+}
+
+@media (max-width: 768px) {
+  .sport-players-tab {
+    padding: 1rem;
+  }
 }
