--- a/src/app/features/sports/components/detail/tabs/sport-teams-tab.component.less
+++ b/src/app/features/sports/components/detail/tabs/sport-teams-tab.component.less
@@ -1,3 +1,7 @@
+.sport-teams-tab {
+  padding: 2rem;
+}
+
 .sport-teams-tab__search-container {
   display: flex;
   align-items: center;
@@ -107,4 +111,10 @@
 
 .sport-teams-tab__error {
   color: var(--tui-text-negative);
+}
+
+@media (max-width: 768px) {
+  .sport-teams-tab {
+    padding: 1rem;
+  }
 }
