--- a/src/app/features/sports/components/detail/tabs/sport-tournaments-tab.component.less
+++ b/src/app/features/sports/components/detail/tabs/sport-tournaments-tab.component.less
@@ -1,3 +1,7 @@
+.sport-tournaments-tab {
+  padding: 2rem;
+}
+
 .sport-tournaments-tab__search-container {
   display: flex;
   align-items: center;
@@ -97,4 +101,10 @@
   padding: 2rem;
   color: var(--tui-text-secondary);
   font-style: italic;
+}
+
+@media (max-width: 768px) {
+  .sport-tournaments-tab {
+    padding: 1rem;
+  }
 }
