--- a/src/app/features/sports/components/detail/tabs/sport-teams-tab.component.html
+++ b/src/app/features/sports/components/detail/tabs/sport-teams-tab.component.html
@@ -12,11 +12,10 @@
       <button
         type="button"
         appearance="flat"
-        icon="@tui.close"
+        iconStart="@tui.close"
         size="s"
         (click)="clearTeamSearch()"
         class="sport-teams-tab__search-clear">
-        <tui-icon [icon]="'@tui.close'" />
       </button>
     }
   </div>
