--- a/src/app/features/sports/components/detail/tabs/sport-tournaments-tab.component.html
+++ b/src/app/features/sports/components/detail/tabs/sport-tournaments-tab.component.html
@@ -13,11 +13,10 @@
         <button
           type="button"
           appearance="flat"
-          icon="@tui.close"
+          iconStart="@tui.close"
           size="s"
           (click)="clearSearch()"
           class="sport-tournaments-tab__search-clear">
-          <tui-icon [icon]="'@tui.close'" />
         </button>
       }
     </div>
