--- a/src/app/features/sports/components/detail/tabs/sport-players-tab.component.less
+++ b/src/app/features/sports/components/detail/tabs/sport-players-tab.component.less
@@ -19,20 +19,14 @@
   margin-bottom: 1.5rem;
 }
 
-.sort-button {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.sort-icon {
-  font-size: 1rem;
-}
-
 .sport-players-tab__player-list {
   display: grid;
   gap: 1rem;
   margin-bottom: 1.5rem;
+
+  @media (max-width: 768px) {
+    grid-template-columns: 1fr;
+  }
 }
 
 .sport-players-tab__player-card {
