--- a/src/app/features/sports/components/detail/tabs/sport-tournaments-tab.component.less
+++ b/src/app/features/sports/components/detail/tabs/sport-tournaments-tab.component.less
@@ -17,6 +17,10 @@
   display: grid;
   gap: 1rem;
   margin-bottom: 1.5rem;
+
+  @media (max-width: 768px) {
+    grid-template-columns: 1fr;
+  }
 }
 
 .sport-tournaments-tab__tournament-card {
