fix(sports): make search fields use full width in sport detail tabs

--- a/src/app/features/sports/components/detail/tabs/sport-positions-tab.component.less
+++ b/src/app/features/sports/components/detail/tabs/sport-positions-tab.component.less
@@ -17,6 +17,10 @@
   gap: 0.5rem;
   flex: 1;
   min-width: 200px;
+
+  tui-textfield {
+    flex: 1;
+  }
 }
 
 .sport-positions-tab__search-clear {
