--- a/src/app/features/sports/components/detail/tabs/sport-tournaments-tab.component.less
+++ b/src/app/features/sports/components/detail/tabs/sport-tournaments-tab.component.less
@@ -7,6 +7,11 @@
   align-items: center;
   gap: 0.5rem;
   margin-bottom: 1.5rem;
+  width: 100%;
+
+  tui-textfield {
+    flex: 1;
+  }
 }
 
 .sport-tournaments-tab__search-clear {
